envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
static_resources:
  clusters:
    - name: pimlico-api
      connect_timeout: 2.0s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      respect_dns_ttl: true
      lb_policy: LEAST_REQUEST
      load_assignment:
        cluster_name: pimlico-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: &host api.pimlico.io
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: *host
    - lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: opentelemetry_collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: default-collector.monitoring
                      port_value: 4317
      name: opentelemetry_collector
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
  listeners:
    - name: pimlico-api
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      per_connection_buffer_limit_bytes: 16777216
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: pimlico-api
                stream_idle_timeout: 900s
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        json_format:
                          downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                          method: '%REQ(:METHOD)%'
                          duration: '%DURATION%'
                          start_time: '%START_TIME(%Y-%m-%dT%H:%M:%S%z)%'
                          path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                          protocol: '%PROTOCOL%'
                          response_code: '%RESPONSE_CODE%'
                          route_name: '%ROUTE_NAME%'
                          traceparent: '%REQ(TRACEPARENT)%'
                          upstream_cluster: '%UPSTREAM_CLUSTER%'
                          upstream_host: '%UPSTREAM_HOST%'
                          upstream_request_attempt_count: '%UPSTREAM_REQUEST_ATTEMPT_COUNT%'
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                # tracing:
                #   provider:
                #     name: envoy.tracers.opentelemetry
                #     typed_config:
                #       '@type': type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                #       grpc_service:
                #         envoy_grpc:
                #           cluster_name: opentelemetry_collector
                #         timeout: 0.250s
                #       service_name: pimlico-proxy
                route_config:
                  name: pimlico-api
                  virtual_hosts:
                    - name: pimlico-api
                      domains:
                        - '*'
                      include_attempt_count_in_response: true
                      request_headers_to_remove:
                        - x-forwarded-host
                        - x-forwarded-port
                        - x-forwarded-proto
                        - x-forwarded-server
                      response_headers_to_add:
                        - header:
                            key: x-request-id
                            value: '%REQ(X-REQUEST-ID)%'
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - name: json-rpc
                          match:
                            prefix: /
                          route:
                            auto_host_rewrite: true
                            cluster: pimlico-api
                            timeout: 10s
